# Petcare-AI

./: .gitignore  README.md  app.py  main.py  netlify.toml  pyproject.toml  requirements.txt
src/agent/: graph.py  nodes.py
src/core/: config.py
src/pipeline/: ingest.py
static/: index.html  script.js  styles.css
tests/: conftest.py  test_config.py
